[package]
name = "mkgpdx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2"
device_query = "2.1"
libc = "0.2"
libloading = "0.8"
phf = { version = "0.11", features = ["macros"] }
region = "3.0"
retour = "0.3"
sdl2 = { version = "0.37", features = ["bundled", "static-link"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
widestring = "1.1"
windows = { version = "0.58", features = ["Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
lto = true
panic = 'abort'
strip = true
codegen-units = 1
incremental = true
